fix(i18n): improve french translation

--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -1,7 +1,7 @@
 {
   "init": "Gitalking ...",
   "no-found-related": "Lien %{link} non trouvé",
-  "please-contact": "S’il vous plaît contactez %{user} pour initialiser les commentaires",
+  "please-contact": "Veuillez contacter %{user} pour initialiser les commentaires",
   "init-issue": "Initialisation des issues",
   "leave-a-comment": "Laisser un commentaire",
   "preview": "Aperçu",
@@ -9,12 +9,12 @@
   "comment": "Commentaire",
   "support-markdown": "Markdown est supporté",
   "login-with-github": "Se connecter avec GitHub",
-  "first-comment-person": "Être le premier à laisser un commentaire !",
-  "commented": "commenter",
+  "first-comment-person": "Soyez le premier à laisser un commentaire !",
+  "commented": "a commenté",
   "load-more": "Charger plus",
   "counts": "%{counts} commentaire |||| %{counts} commentaires",
-  "sort-asc": "Trier par plus ancien",
-  "sort-desc": "Trier par plus récent",
+  "sort-asc": "Trier du plus ancien au plus récent",
+  "sort-desc": "Trier du plus récent au plus ancien",
   "logout": "Déconnexion",
   "anonymous": "Anonyme"
 }
